--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/mern-blog
+MONGO_URI=mongodb+srv://anirudhkohli18:<Anirudh4633>@cluster0.qmrpsem.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your_jwt_secret_here
